# unseen_object_clustering_ros2

./: .gitmodules  CMakeLists.txt  README.md  package.xml
srv/: SegCloud.srv
unseen_obj_clst_ros2/: segmentation_client.py  segmentation_cloud_client.py  segmentation_cloud_server.py  segmentation_rgbd_server.py  segmentation_server.py
unseen_obj_docker/backup/: docker_run_cgn_only.sh
